# DiligentCore

./: .gitmodules  CMakeLists.txt  dotnet-build-package.py
.github/workflows/: build-nuget-package.yml  publish-nuget-package.yml
Graphics/GraphicsAccessories/src/: GraphicsAccessories.cpp
Graphics/GraphicsEngine.NET/: .gitignore  Dearchiver.cs  DeviceContext.cs  Diligent-GraphicsEngine.NET.csproj  EngineFactory.cs  GraphicsTypes.cs  Mapping.xml  Native.cs  Query.cs  RenderDevice.cs  ResourceMapping.cs  Shader.cs  ShaderBindingTable.cs
Graphics/GraphicsEngine.NET/Primitives/: ComObject.cs  ComObjectVtbl.cs
Graphics/GraphicsEngine/interface/: DeviceContext.h  GraphicsTypes.h  Texture.h
Graphics/GraphicsEngine/src/: DeviceObjectArchive.cpp
Graphics/GraphicsEngineVulkan/src/: SwapChainVkImpl.cpp
Graphics/GraphicsEngineWebGPU/: CMakeLists.txt
Graphics/GraphicsEngineWebGPU/include/: BufferViewWebGPUImpl.hpp  BufferWebGPUImpl.hpp  DeviceContextWebGPUImpl.hpp  EngineWebGPUImplTraits.hpp  FenceWebGPUImpl.hpp  FramebufferWebGPUImpl.hpp  PipelineResourceSignatureWebGPUImpl.hpp  QueryWebGPUImpl.hpp  RenderDeviceWebGPUImpl.hpp  RenderPassWebGPUImpl.hpp  SamplerWebGPUImpl.hpp  ShaderResourceCacheWebGPU.hpp  ShaderWebGPUImpl.hpp  SwapChainWebGPUImpl.hpp  TextureViewWebGPUImpl.hpp  TextureWebGPUImpl.hpp  WebGPUObjectWrappers.hpp  WebGPUTypeConversions.hpp
Graphics/GraphicsEngineWebGPU/interface/: DeviceContextWebGPU.h  EngineFactoryWebGPU.h  RenderDeviceWebGPU.h  SwapChainWebGPU.h
Graphics/GraphicsEngineWebGPU/src/: DeviceContextWebGPUImpl.cpp  EngineFactoryWebGPU.cpp  RenderDeviceWebGPUImpl.cpp  SwapChainWebGPUImpl.cpp  TextureWebGPUImpl.cpp  WebGPUTypeConversions.cpp
Tests/DiligentCoreAPITest/: CMakeLists.txt
Tests/DiligentCoreAPITest/src/: GenerateArchiveDotNetTest.cpp  GenerateImagesDotNetTest.cpp
Tests/DiligentCoreAPITest/src/WebGPU/: CreateObjFromNativeResWebGPU.cpp
Tests/DiligentCoreTest.NET/: .gitignore  DiligentCoreTest.NET.csproj  DiligentGraphicsEngineTests.cs
Tests/GPUTestFramework/: CMakeLists.txt
Tests/GPUTestFramework/include/: TestingSwapChainBase.hpp
Tests/GPUTestFramework/include/WebGPU/: TestingEnvironmentWebGPU.hpp  TestingSwapChainWebGPU.hpp
Tests/GPUTestFramework/src/: GPUTestingEnvironment.cpp  TestingSwapChainBase.cpp
Tests/GPUTestFramework/src/WebGPU/: TestingEnvironmentWebGPU.cpp  TestingSwapChainWebGPU.cpp
